force-app/main/default/objects/Program_Eligible_Fund__c/Program_Eligible_Fund__c.object-meta.xml
<CustomObject>
    <label>Program Eligible Fund</label>
    <nameField>
        <displayFormat>PEFN-{0000000}</displayFormat>
        <label>Program Eligible Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Eligible Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>