force-app/main/default/objects/Program_Eligible_Fund__c/fields/Eligible_Use__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Use__c</fullName>
    <label>Eligible Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>