force-app/main/default/objects/Program_Eligible_Fund__c/fields/Ineligible_Use__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Use__c</fullName>
    <label>Ineligible Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>